[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "parser"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }


[dependencies.sqlx]
version = "0.6.2"
features = [ "runtime-async-std-native-tls","postgres", "chrono", "decimal",  "json" ]
